--- a/styles.css
+++ b/styles.css
@@ -6,22 +6,36 @@
 --white: #FFFFFF;
 }
 body{
-    text-align: center;
+    background-color: var(--light-grey);
+}
+.container{
+    margin: 0% 40%;
+    width: 80%;
+}
+
+.heading{
+    font-size: x-large;
+    font-weight: bold;
+    margin-bottom: 3rem;
+    color: var(--primary-color);
 }
 
 .btn-radio{
     display: inline;
     vertical-align: text-bottom; 
 }
-
+label{
+    font-weight: bold;
+}
 input, label, button{
     display: block;
-    margin-top: 1.5rem;
+    margin-top: 1.2rem;
 }
 
 input{
-    height: 1rem;
-    border-radius: 1rem;  
+    height: 1.5rem;
+    border: 1px solid var(--primary-color);
+    border-radius: 0.5rem; 
 }
 
 .brand-name{
@@ -51,5 +65,21 @@ input{
 }
 
 .nav-bar .active{
+    font-weight: bold;
+}
+
+.btn-submit{
+    margin-left: 1rem;
+    width: 7rem;
+    height: 3rem;
+    border: 1px solid var(--white);
+    border-radius: 1rem;
+    font-weight: bold;
+    color: var(--white);
+    background-color: var(--primary-color);
+}
+
+.output-message{
+    font-size: large;
     font-weight: bold;
 }
